<resources>
    <string name="app_name">Brotherhood</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_actors">Your Actors</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="your_genres">Your Genres</string>
    <string name="get_tickets">Get Tickets</string>
    <string name="theater">Theater</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="viewing_ratings">Viewing Ratings</string>
    <string name="summary">Summary</string>
    <string name="cast">Cast</string>
    <string name="you_have_no_favorite_favorite_movies_in_movie_details">You have no favorites, You can favorite movies in movie details.</string>
    <string name="tickets">Tickets</string>
    <string name="theatre">Theatre</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="recommended">Recommended</string>
    <string name="settings">Settings</string>
</resources>
